fixed hovering on mobile devices

--- a/src/styles/Recommendations/Carousel.scss
+++ b/src/styles/Recommendations/Carousel.scss
@@ -105,20 +105,7 @@
     opacity: 0;
     transition: all 0.5s ease-in-out;
 }
-.slides:hover{
-    transform: scale(1.06);
-    cursor: pointer;
-    box-shadow: none;
-}
-.slides:hover::after{
-    opacity: 1;
-}
-.right__arrow:hover{
-    cursor: pointer;
-}
-.left__arrow{
-    cursor: pointer;
-}
+
 
 @media(min-width: 768px){
     .left__arrow{
@@ -126,5 +113,19 @@
     }
     .right__arrow{
         right: 30px;
+    }
+    .slides:hover{
+        transform: scale(1.06);
+        cursor: pointer;
+        box-shadow: none;
+    }
+    .slides:hover::after{
+        opacity: 1;
+    }
+    .right__arrow:hover{
+        cursor: pointer;
+    }
+    .left__arrow:hover{
+        cursor: pointer;
     }
 }
